Returned fix for extra margin applied to listing columns

--- a/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
+++ b/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
@@ -170,6 +170,7 @@
             }
 
             .adobe-stock-related-images-tab-content {
+                max-height: 190px;
                 height: auto;
                 vertical-align: middle;
                 display: inline-block;
